<?xml version="1.0" encoding="utf-8"?><!--
     Copyright (C) 2007 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
  
          http://www.apache.org/licenses/LICENSE-2.0
  
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<resources xmlns:tools="http://schemas.android.com/tools" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2" tools:ignore="MissingTranslation,MissingTranslation,MissingTranslation,MissingTranslation,MissingTranslation,MissingTranslation,MissingTranslation,MissingTranslation,MissingTranslation,MissingTranslation,MissingTranslation">
    <!--      Here come strings which are not contained in the AOSP -->

    <string-array name="fade_in_time_sec_values" tools:ignore="MissingTranslation">
        <item>1</item>
        <item>10</item>
        <item>20</item>
        <item>30</item>
        <item>60</item>
        <item>120</item>
    </string-array>
    <!-- Setting labels on Set alarm screen: Prealarm -->
    <string name="alarm_prealarm">Gentle pre-alarm</string>
    <!-- Pre-alarm duration title -->
    <string name="prealarm_duration_title" tools:ignore="MissingTranslation">Pre-alarm duration</string>
    <!--
         Entries listed in the ListPreference when invoking the pre-alarm duration
         preference.
    -->
    <string-array name="prealarm_duration_entries">
        <item>Off</item>
        <item>10 minutes</item>
        <item>20 minutes</item>
        <item>30 minutes</item>
        <item>45 minutes</item>
        <item>60 minutes</item>
    </string-array>
    <!--
         Values that are retrieved from the ListPreference. These must match
         the prealarm_duration_entries above.
    -->
    <string-array name="prealarm_duration_values" tools:ignore="MissingTranslation">
        <item>-1</item>
        <item>10</item>
        <item>20</item>
        <item>30</item>
        <item>45</item>
        <item>60</item>
    </string-array>
    <!-- Pre-alarm duration summary string set based on the preference value. -->
    <string name="prealarm_summary">Pre-alarm will start
<xliff:g id="minutes">%d</xliff:g> minutes before the main alarm</string>
    <string name="info_fragment_prealarm_summary"><xliff:g id="minutes">%d</xliff:g> minutes pre-alarm</string>
    <string name="prealarm_off_summary">Pre-alarm is switched off</string>
    <string name="master_volume">Master volume</string>
    <string name="menu_share">Share</string>
    <string name="menu_bugreport">Send a bugreport</string>
    <string name="dialog_say_thanks_review_button">Rate the app</string>
    <string name="dialog_bugreport_hint">Describe your complaint here</string>
    <string name="longclick_dismiss_title">Longclick dismiss</string>
    <string name="longclick_dismiss_summary">Hold the dismiss button to dismiss the alarm</string>
    <string name="fade_in_time_sec_title" tools:ignore="MissingTranslation">Fade-in duration</string>
    <string-array name="fade_in_time_sec_entries">
        <item>Off</item>
        <item>10 seconds</item>
        <item>20 seconds</item>
        <item>30 seconds</item>
        <item>60 seconds</item>
        <item>120 seconds</item>
    </string-array>
    <string name="fade_in_summary">Fade-in duration is <xliff:g id="seconds">%d</xliff:g> seconds</string>
    <string name="fade_in_off_summary">Fade-in is switched off</string>
    <string-array name="alarm_set_short">
        <item>Less than a minute from now</item>
        <item><xliff:g example="2 days" id="DAYS">%1$s</xliff:g></item>
        <item><xliff:g example="2 hours" id="HOURS">%2$s</xliff:g></item>
        <item><xliff:g example="2 days" id="DAYS">%1$s</xliff:g> and <xliff:g example="2 hours" id="HOURS">%2$s</xliff:g></item>
        <item><xliff:g example="2 minutes" id="MINUTES">%3$s</xliff:g></item>
        <item><xliff:g example="2 days" id="DAYS">%1$s</xliff:g> and <xliff:g example="2 minutes" id="MINUTES">%3$s</xliff:g></item>
        <item><xliff:g example="2 hours" id="HOURS">%2$s</xliff:g> and <xliff:g example="2 minutes" id="MINUTES">%3$s</xliff:g></item>
        <item><xliff:g example="2 days" id="DAYS">%1$s</xliff:g>, <xliff:g example="2 hours" id="HOURS">%2$s</xliff:g>, and <xliff:g example="2 minutes" id="MINUTES">%3$s</xliff:g></item>
    </string-array>

    <string name="theme_title">Interface theme</string>
    <string-array name="themes_entries">
        <item>Dark</item>
        <item>Light</item>
    </string-array>
    <string-array name="themes_values">
        <item>dark</item>
        <item>light</item>
    </string-array>
    <string name="preference_list_row_layout_title">Layout style</string>
    <string-array name="preference_list_row_layout_entries">
        <item>Compact</item>
        <item>Bold</item>
        <item>Classic</item>
    </string-array>
    <string-array name="preference_list_row_layout_values">
        <item>compact</item>
        <item>bold</item>
        <item>classic</item>
    </string-array>

    <string name="simple_alarm_clock">Simple Alarm Clock</string>
    <!--
     Entries listed in the ListPreference when invoking the snooze duration
     preference.
-->
    <string-array name="snooze_duration_with_off_entries">
        <item>Off</item>
        <item>5 minutes</item>
        <item>10 minutes</item>
        <item>15 minutes</item>
        <item>20 minutes</item>
        <item>25 minutes</item>
        <item>30 minutes</item>
    </string-array>
    <!--
         Values that are retrieved from the ListPreference. These must match
         the snooze_duration_entries above.
    -->
    <string-array name="snooze_duration_with_off_values">
        <item>-1</item>
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>25</item>
        <item>30</item>
    </string-array>
    <string name="alarm_alert_reschedule_text">Reschedule</string>
    <string name="alarm_alert_hold_the_button_text">Hold the button!</string>

    <string name="preference_category_sound">Volumes and sound</string>
    <string name="preference_category_ui">User interface</string>
    <string name="preference_category_durations">Durations</string>
    <string name="details_no_ringtone_picker">No Ringtone provider found...</string>
    <string name="permissions_external_storage_text">It seems that we cannot play %s, probably because a permission is required. If you want, you can grant the permission. Alternatively, select a different sound. This decision can be changed in System Settings.</string>
    <string name="menu_about_title">About</string>
    <string name="dialog_about_content">Simple Alarm Clock is an open source project which brings pure alarm experience to you by combining essential features and clean interface.

        \n\nTip:
        \n· Select layout size in settings
        \n· Select color theme in settings

        \n\nNew in this version:
        \n· Fixes for Android 9
        \n· New Design
        \n· Select row size in settings

        \n· <a href="https://github.com/yuriykulikov/AlarmClock">Learn more on GitHub</a>

        \n\nSupport the app:
        \n· <a href="https://www.paypal.me/YuriyKulikov">PayPal</a>
        \n· <a href="https://play.google.com/store/apps/details?id=com.premium.alarm">Go premium</a>
    </string>
    <string name="dialog_bugreport_faq"><b>Common issues and how to fix them</b>
        \n\nIf something was working and then suddenly broke, it is very likely that Android has messed up the application cache. This happens from time to time to all apps. <b>Uninstalling and reinstalling usually resolves the issue.</b>

        \n\nIf there is no sound, please check your device settings. You must use at least Alarms Only on Android 8 and you should not use Do not disturb on Android 9. Read more on <a href="https://support.google.com/android/answer/9069335">Google support page</a>

        \n\nIf alarm did not go off, please make sure that you did not accidentally switched it off. We get a number of complaints regarding this and we see that users are simply switching the alarm after a while <b>in their sleep</b>. If you experience that, move the phone further away when you go to bed.

        \n\nIf nothing helps, write us a message in the field below. We will do our best to try to help you.
    </string>
    <string name="dialog_say_thanks_title">Say thanks</string>
    <string name="dialog_say_thanks_review_message">Thanks a lot for taking your time to say thanks! Simple alarm clock is an open source non-profit project. We will never use ads or gather user data to earn money. However, we are extremely happy if you appreciate our work. One of the best ways to say thanks is to write a positive review. You can also ask a question or leave your feature request.</string>
    <string name="dialog_say_thanks_premium_text">If you really like the app, consider upgrading to the premium version! Premium sounds great, does it not?</string>
    <string name="dialog_say_thanks_donate_message">Another great way to support the app is to buy me a coffee! You can do this using one of the following options</string>
    <string name="dialog_say_thanks_premium_text_as_button"><a href="https://play.google.com/store/apps/details?id=com.premium.alarm">Go premium</a></string>
    <string name="dialog_say_thanks_donate_paypal"><a href="https://www.paypal.me/YuriyKulikov">PayPal</a></string>
    <string name="dialog_say_thanks_donate_yandex"><a href="https://money.yandex.ru/to/410019676183865">Yandex</a></string>
</resources>